Fixing scroll issues on mobile

--- a/src/app/components/body/body.component.scss
+++ b/src/app/components/body/body.component.scss
@@ -48,6 +48,8 @@
   min-height: 110vh;
   max-height: 110vh;
   height: 100%;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .backgroundImg {
