--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -14,6 +14,7 @@
 .settingsBtn {
   color: var(--greetingTextColor);
   opacity: 0.3;
+  margin-right: 0.2rem;
 }
 
 .settingsBtn:hover {
